syntax = "proto3";
import "schema.proto";

package manifest_proto;
message SpaceOptions {
  string uri = 1;
}

message Manifest {
  SpaceOptions options = 1;
  schema_proto.Schema schema = 2;
  repeated string scalar_files = 3;
  repeated string vector_files = 4;
  repeated string delete_files = 5;
}